--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -492,6 +492,10 @@
         "message": "Tải xuống chương",
         "description": "Tooltip text for the download chapter icon"
     },
+    "__MSG_tooltip_Chapter_Selection__": {
+        "message": "Các chương đã chọn sẽ được bao gồm trong các hành động: Đóng gói EPUB, Tải xuống chương hoặc Thêm vào thư viện",
+        "description": "Tooltip text explaining what selected chapters are used for"
+    },
     "__MSG_tooltip_Refresh_Chapter__": {
         "message": "Làm mới chương",
         "description": "Tooltip for refresh chapter menu option"
@@ -500,6 +504,10 @@
         "message": "Xóa chương",
         "description": "Tooltip for delete chapter menu option"
     },
+    "__MSG_menu_Open_Chapter_URL__": {
+		"message": "Mở liên kết chương",
+		"description": "Menu option to open the chapter URL in a new tab"
+	},
     "__MSG_menu_Download_Chapter__": {
 		"message": "Tải xuống tệp HTML",
 		"description": "Menu option to download a single chapter as HTML file"
