--- a/plugin/_locales/en/messages.json
+++ b/plugin/_locales/en/messages.json
@@ -179,9 +179,9 @@
 		"message": "Add to Library",
 		"description": "Label on button to create the EPUB and Add it to the Library"
 	},
-	"__MSG_button_Pause_to_Library__": {
-		"message": "Pause to Library",
-		"description": "Label on button to Pause the download"
+	"__MSG_button_Stop_Download__": {
+		"message": "Stop",
+		"description": "Label on button to stop/cancel the download"
 	},
 	"__MSG_button_Reset__": {
 		"message": "Reset",
