Library style rearrangement

--- a/plugin/_locales/en/messages.json
+++ b/plugin/_locales/en/messages.json
@@ -16,7 +16,7 @@
 		"description": "Label for checkbox to Show Advanced Library Options"
 	},
 	"__MSG_label_Lib_Download_Epub_After_Update__": {
-		"message": "Download Epubs after new Chapter got added automatically.",
+		"message": "Automatically Download Epubs After Adding New Chapters",
 		"description": "Label for checkbox to Download Epubs after update"
 	},
 	"__MSG_label_Lib_Warning_In_Progress___": {
