--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -409,7 +409,7 @@
         "description": "Label for checkbox to Show Advanced Library Options"
     },
     "__MSG_label_Lib_Download_Epub_After_Update__": {
-        "message": "Tải EPUB tự động sau khi thêm chương mới.",
+        "message": "Tự động tải EPUB sau khi thêm các chương mới",
         "description": "Label for checkbox to Download Epubs after update"
     },
     "__MSG_label_Lib_Warning_In_Progress___": {
