--- a/plugin/_locales/uk/messages.json
+++ b/plugin/_locales/uk/messages.json
@@ -576,6 +576,10 @@
 		"message": "Відкрити посилання на розділ",
 		"description": "Menu option to open the chapter URL in a new tab"
 	},
+	"__MSG_menu_Open_Story_URL__": {
+		"message": "Відкрити посилання на історію",
+		"description": "Menu option to open the main story URL in a new tab"
+	},
 	"__MSG_menu_Download_Chapter__": {
 		"message": "Завантажити HTML файл",
 		"description": "Menu option to download a single chapter as HTML file"
