--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -512,6 +512,10 @@
 		"message": "Mở liên kết chương",
 		"description": "Menu option to open the chapter URL in a new tab"
 	},
+	"__MSG_menu_Open_Story_URL__": {
+		"message": "Mở liên kết truyện",
+		"description": "Menu option to open the main story URL in a new tab"
+	},
     "__MSG_menu_Download_Chapter__": {
 		"message": "Tải xuống tệp HTML",
 		"description": "Menu option to download a single chapter as HTML file"
