--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -587,5 +587,9 @@
 	"__MSG_tooltip_More_Actions__": {
 		"message": "Дополнительные действия",
 		"description": "Tooltip for more actions menu button"
+	},
+	"__MSG_label_library_no_books__": {
+		"message": "В вашей библиотеке нет книг.",
+		"description": "Message shown when the library is empty"
 	}
 }
