--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -523,5 +523,9 @@
 	"__MSG_tooltip_More_Actions__": {
         "message": "Thêm hành động",
         "description": "Tooltip for more actions menu button"
-    }
+    },
+	"__MSG_label_library_no_books__": {
+		"message": "Bạn không có sách nào trong thư viện của mình.",
+		"description": "Message shown when the library is empty"
+	}
 }
