--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -128,7 +128,7 @@
         "description": ""
     },
     "__MSG_label_Developer_Stuff__": {
-        "message": "Dành Cho Lập Trình Viên:",
+        "message": "Dành Cho Lập Trình Viên",
         "description": ""
     },
     "__MSG_label_Fetch_Highest_Resolution_Images__": {
