--- a/plugin/_locales/en/messages.json
+++ b/plugin/_locales/en/messages.json
@@ -284,7 +284,7 @@
 		"description": "Label for checkbox to choose between EPUB 2 and 3"
 	},
 	"__MSG_label_EPUB_Internal_Structure__": {
-		"message": "EPUB Internal Structure",
+		"message": "EPUB File Structure",
 		"description": "Label for dropdown to choose EPUB internal folder structure"
 	},
 	"__MSG_label_File_Author_as__": {
@@ -324,7 +324,7 @@
 		"description": "Label in front input for file to save EPUB as"
 	},
 	"__MSG_label_Developer_Stuff__": {
-		"message": "Developer Stuff:",
+		"message": "Developer stuff",
 		"description": "Label for checkbox to show/hide buttons for developer testing (in Advanced settings)."
 	},
 	"__MSG_label_Fetch_Highest_Resolution_Images__": {
