--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -47,6 +47,14 @@
         "message": "Tải các chương",
         "description": "Label on button to download chapters without packing into EPUB"
     },
+    "__MSG_button_Add_to_Library__": {
+        "message": "Thêm vào Thư viện",
+        "description": "Label on button to create the EPUB and Add it to the Library"
+    },
+    "__MSG_button_Update_Library_Book__": {
+        "message": "Cập nhật Sách Thư viện",
+        "description": "Label on button to add chapters to the currently selected library book"
+    },
     "__MSG_button_Reset__": {
         "message": "Cài đặt về ban đầu",
         "description": ""
