--- a/plugin/_locales/en/messages.json
+++ b/plugin/_locales/en/messages.json
@@ -508,7 +508,7 @@
 		"description": "Label in front of input for novel's position in series."
 	},
 	"__MSG_label_No_Download_Popup__": {
-		"message": "Don't popup 'SaveAs' dialog when save Epub",
+		"message": "Don't show 'Save As' dialog when saving EPUB",
 		"description": "Label for checkbox to download the final epub without a popup"
 	},
 	"__MSG_label_Write_Error_History_To_File__": {
