--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -183,6 +183,10 @@
 		"message": "Имя файла:",
 		"description": "Label in front input for file to save EPUB as"
 	},
+	"__MSG_label_Default_Author_Name__": {
+		"message": "Имя автора по умолчанию",
+		"description": "Fallback author name when none is found"
+	},
 	"__MSG_label_Developer_Stuff__": {
 		"message": "Инструменты разработчика",
 		"description": "Label for checkbox to show/hide buttons for developer testing (in Advanced settings)."
