--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -596,6 +596,22 @@
 		"message": "Скачать HTML файл",
 		"description": "Menu option to download a single chapter as HTML file"
 	},
+	"__MSG_menu_Reorder_Chapters__": {
+		"message": "Переупорядочить главы",
+		"description": "Menu option to reorder chapters in a library book"
+	},
+	"__MSG_modal_title_Reorder_Chapters__": {
+		"message": "Переупорядочить главы",
+		"description": "Title for the chapter reordering modal"
+	},
+	"__MSG_label_Reorder_Instructions__": {
+		"message": "Используйте кнопки со стрелками для изменения порядка глав. Изменения будут сохранены в вашей библиотеке.",
+		"description": "Instructions text in the chapter reordering modal"
+	},
+	"__MSG_button_Save_Order__": {
+		"message": "Сохранить порядок",
+		"description": "Button to save the new chapter order"
+	},
 	"__MSG_tooltip_More_Actions__": {
 		"message": "Дополнительные действия",
 		"description": "Tooltip for more actions menu button"
