--- a/plugin/_locales/uk/messages.json
+++ b/plugin/_locales/uk/messages.json
@@ -596,6 +596,22 @@
 		"message": "Завантажити HTML файл",
 		"description": "Menu option to download a single chapter as HTML file"
 	},
+	"__MSG_menu_Reorder_Chapters__": {
+		"message": "Переупорядкувати розділи",
+		"description": "Menu option to reorder chapters in a library book"
+	},
+	"__MSG_modal_title_Reorder_Chapters__": {
+		"message": "Переупорядкувати розділи",
+		"description": "Title for the chapter reordering modal"
+	},
+	"__MSG_label_Reorder_Instructions__": {
+		"message": "Використовуйте кнопки зі стрілками для зміни порядку розділів. Зміни будуть збережені у вашій бібліотеці.",
+		"description": "Instructions text in the chapter reordering modal"
+	},
+	"__MSG_button_Save_Order__": {
+		"message": "Зберегти порядок",
+		"description": "Button to save the new chapter order"
+	},
 	"__MSG_tooltip_More_Actions__": {
 		"message": "Додаткові дії",
 		"description": "Tooltip for more actions menu button"
