--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -436,6 +436,10 @@
         "message": "Bạn có chắc chắn muốn xóa toàn bộ thư viện? Điều này sẽ xóa tất cả các sách đã lưu và không thể hoàn tác.",
         "description": "Confirmation dialog when clearing the entire library"
     },
+    "__MSG_confirm_delete_library_book__": {
+        "message": "Bạn có chắc chắn muốn xóa sách này khỏi thư viện? Hành động này không thể hoàn tác.",
+        "description": "Confirmation dialog when deleting a single library book"
+    },
     "__MSG_button_Lib_Template_Export_Library__": {
         "message": "Xuất thư viện",
         "description": "Label on button to export Library in json format"
@@ -457,8 +461,8 @@
         "description": "Label on button to Update all Epubs"
     },
     "__MSG_button_Lib_Template_Delete_EPUB__": {
-        "message": "Xóa sách",
-        "description": "Label on button to Delete Book from Library"
+        "message": "Xóa sách khỏi thư viện",
+        "description": "Label on button to Delete Library Book"
     },
     "__MSG_button_Lib_Template_Search_new_Chapters__": {
         "message": "Tìm chương mới",
