--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -604,6 +604,14 @@
 		"message": "Переупорядочить главы",
 		"description": "Menu option to reorder chapters in a library book"
 	},
+	"__MSG_menu_Hide_Library_Chapters__": {
+		"message": "Скрыть главы из библиотеки",
+		"description": "Menu option to hide chapters that are already in the library book"
+	},
+	"__MSG_menu_Show_Library_Chapters__": {
+		"message": "Показать главы из библиотеки",
+		"description": "Menu option to show chapters that are already in the library book"
+	},
 	"__MSG_modal_title_Reorder_Chapters__": {
 		"message": "Переупорядочить главы",
 		"description": "Title for the chapter reordering modal"
