--- a/plugin/_locales/uk/messages.json
+++ b/plugin/_locales/uk/messages.json
@@ -604,6 +604,14 @@
 		"message": "Переупорядкувати розділи",
 		"description": "Menu option to reorder chapters in a library book"
 	},
+	"__MSG_menu_Hide_Library_Chapters__": {
+		"message": "Приховати розділи з бібліотеки",
+		"description": "Menu option to hide chapters that are already in the library book"
+	},
+	"__MSG_menu_Show_Library_Chapters__": {
+		"message": "Показати розділи з бібліотеки",
+		"description": "Menu option to show chapters that are already in the library book"
+	},
 	"__MSG_modal_title_Reorder_Chapters__": {
 		"message": "Переупорядкувати розділи",
 		"description": "Title for the chapter reordering modal"
