--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -540,6 +540,14 @@
 		"message": "Sắp xếp lại chương",
 		"description": "Menu option to reorder chapters in a library book"
 	},
+	"__MSG_menu_Hide_Library_Chapters__": {
+		"message": "Ẩn chương trong thư viện",
+		"description": "Menu option to hide chapters that are already in the library book"
+	},
+	"__MSG_menu_Show_Library_Chapters__": {
+		"message": "Hiện chương trong thư viện",
+		"description": "Menu option to show chapters that are already in the library book"
+	},
 	"__MSG_modal_title_Reorder_Chapters__": {
 		"message": "Sắp xếp lại chương",
 		"description": "Title for the chapter reordering modal"
