--- a/plugin/_locales/ru/messages.json
+++ b/plugin/_locales/ru/messages.json
@@ -308,7 +308,7 @@
 		"description": "Message shown while looking for list of Chapter URLs."
 	},
 	"__MSG_Shift_Click__": {
-		"message": "Вы можете выделить несколько глав следующим образом: отметьте первую желаемую главу, зажмите клавишу Shift и отметьте последнюю желаемую главу.",
+		"message": "Вы можете выделить несколько глав следующим образом: отметьте первую желаемую главу, зажмите клавишу Shift и отметьте последнюю желаемую главу.\n\nЭто уведомление можно отключить в Расширенных настройках.",
 		"description": "Tell user how to shift-click to multiselect."
 	},
 	"convertToXhtmlWarning": {
