--- a/plugin/_locales/en/messages.json
+++ b/plugin/_locales/en/messages.json
@@ -914,6 +914,10 @@
 		"message": "Show Chapters in Library Book",
 		"description": "Menu option to show chapters that are already in the library book"
 	},
+	"__MSG_menu_Export_Story_Details_JSON__": {
+		"message": "Export Story Details as JSON",
+		"description": "Menu option to export story metadata and details as JSON file"
+	},
 	"__MSG_modal_title_Reorder_Chapters__": {
 		"message": "Reorder Chapters",
 		"description": "Title for the chapter reordering modal"
