--- a/plugin/_locales/vi/messages.json
+++ b/plugin/_locales/vi/messages.json
@@ -548,6 +548,10 @@
 		"message": "Hiện chương trong thư viện",
 		"description": "Menu option to show chapters that are already in the library book"
 	},
+	"__MSG_menu_Export_Story_Details_JSON__": {
+		"message": "Xuất chi tiết truyện sang JSON",
+		"description": "Menu option to export story metadata and details as JSON file"
+	},
 	"__MSG_modal_title_Reorder_Chapters__": {
 		"message": "Sắp xếp lại chương",
 		"description": "Title for the chapter reordering modal"
